// user proto msg

package game;

message UserCreateReq {
    required uint32 uid  = 1;    // 用户id 客户端临时id 小于1000000 服务器用9位数
	required uint32 type = 2;	 // 绑定用户类型 1-qq 2-微信 3-...
	required string bind_id = 3;  // 绑定账号
}

message UserCreateRet {
	required uint32 uid = 1;    // 用户id
	optional uint32 qq  = 2;	// 
	optional string wechat = 3;
}

message UserLoginReq {	
	required uint32 uid = 1;    // 用户id
}

message UserLoginRet {
}

message UserErrorRet {
	required uint32 err_code = 1;	//见error_code定义
}

message UserLogoutReq {	
	required uint32 uid = 1;    // 用户id
}

message UserLogoutRet {
}

